export enum UserStatus {
  ACTIVE = 'ACTIVE',
  DISABLED = 'DISABLED',
  BLOCKED = 'BLOCKED',
  DELETED = 'DELETED',
}

export enum TransferStatus {
  CREATED = 'CREATED',
  UPLOADED = 'UPLOADED',
  SENT = 'SENT',
  ACCEPTED = 'ACCEPTED',
  RETRIEVED = 'RETRIEVED',
  DELETED = 'DELETED',
  EXPIRED = 'EXPIRED',
  REFUSED = 'REFUSED',
}

export enum LogInfo {
  TRANSFER_CREATED = 'TRANSFER_CREATED',
  TRANSFER_UPLOADED = 'TRANSFER_UPLOADED',
  TRANSFER_SENT_FAILED = 'TRANSFER_SENT_FAILED',
  TRANSFER_SENT = 'TRANSFER_SENT',
  TRANSFER_ACCEPTED = 'TRANSFER_ACCEPTED',
  TRANSFER_ACCEPTED_FAILED = 'TRANSFER_ACCEPTED_FAILED',
  TRANSFER_RETRIEVED_FAILED = 'TRANSFER_RETRIEVED_FAILED',
  TRANSFER_RETRIEVED = 'TRANSFER_RETRIEVED',
  TRANSFER_DELETED = 'TRANSFER_DELETED',
  TRANSFER_EXPIRED = 'TRANSFER_EXPIRED',
  TRANSFER_REFUSED = 'TRANSFER_REFUSED',
}
