@startuml

enum UserStatus {
    ACTIVE
    DISABLED
    BLOCKED
    DELETED
}

enum TransferStatus {
    CREATED
    UPLOADED
    SENT
    ACCEPTED
    RETRIEVED
    DELETED
    EXPIRED
    REFUSED
}

enum LogInfo {
    TRANSFER_CREATED
    TRANSFER_UPLOADED
    TRANSFER_SENT_FAILED
    TRANSFER_SENT
    TRANSFER_ACCEPTED
    TRANSFER_RETRIEVED_FAILED
    TRANSFER_RETRIEVED
    TRANSFER_DELETED
    TRANSFER_EXPIRED
    TRANSFER_REFUSED
}

class User {
    id: bigserial
    username: text
    created_at: timestamp
}

class LocalUser {
    status: UserStatus
    email: text
    last_login: timestamp
    password_hash: text
    private_key_encrypted: text
    private_key_kdf: text 32bits
    public_key: text
    key_created_at: timestamp
}

class RemoteUser {
    domain: text
}

class FileTransfer {
    id: bigserial
    symmetric_key_encrypted: text
    status: TransferStatus
    created_at: timestamp
    filename: varchar
    subject: varchar
    s3_path: text [optional]
}

class TrustedRecipient {
    public_key_hash: text
    created_at: timestamp
}

class TransferLog {
    id: bigserial
    info: LogInfo
    created_at: timestamp
}

LocalUser -up-|> User
RemoteUser -up-|> User

User "1" -- "*" FileTransfer: sends >
User "1" -- "*" FileTransfer: receives >

LocalUser "1" -- "*" TrustedRecipient: knows/trusts >
TrustedRecipient "*" -- "1" User: associated to >

User "0..1" -- "*" TransferLog: logs >
FileTransfer "1" -- "*" TransferLog: logs >

@enduml